Fri, Jun 10, 2022, 11:27 AM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -2,7 +2,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-.header-image{
+div.header-image{
     background-image: url('Picture2.png');
     /* width: 100px; */
     /* display:block; */
