Fri, Jun 10, 2022, 11:49 AM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -4,6 +4,7 @@
 
 div.header-image{
     background-image: url('Picture2.png');
+    width: 100%;
     background-position: left;
     background-repeat: no-repeat;
     border-radius: 20px;
