--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -38,17 +38,15 @@ body {
     color: black;
     font-size:1.5vw;
     background-color: #ecf0f1;
-    /* border: 2px solid; */
     border:none;
     border-radius: 5px;
     width: 100%;
     font-family: Tahoma;
 }
 
-.buttons button:hover {
+.buttons #GreyButton:hover {
     background-color: #444dff;
     color:#ffffff;
-    /* font-weight: bold; */
     cursor: pointer;
 }
 
@@ -62,8 +60,6 @@ body {
     padding-top: 0.2em;
     background-color: #bec4c4;
     border: 200px;
-    /* margin-left: 30%;
-    margin-right: 30%; */
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     margin-top: 20px;
@@ -75,7 +71,6 @@ body {
     padding-bottom: 30px;
     font-size: xx-large;
     margin-bottom: 0px;
-    /* font-weight: bold; */
 }
 
 /* Events */
