--- a/public/stylesheets/book_event.css
+++ b/public/stylesheets/book_event.css
@@ -85,9 +85,8 @@ input[type="checkbox"] {
 #cancel-button {
     width: 15%;
     font-size: 1.2em;
-    background-color: white;
-    border-color: grey;
-    border-width: 1px;
+    background-color: #f5f5f5;
+    border: none;
     padding: 15px;
     border-radius: 5px; /*rounded borders  */
     cursor: pointer;
