Fri, Jun 10, 2022, 1:04 PM +00:00

--- a/public/stylesheets/add_event.css
+++ b/public/stylesheets/add_event.css
@@ -121,7 +121,7 @@ input[type="time"] {
     cursor: pointer;
 }
 
-#login-button:hover {
+#purple-button:hover {
     background-color: #444;
     color:#ffffff;
     cursor: pointer;
